--- a/android-tru-forms/src/main/res/layout/tru_date_pick_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_date_pick_view.xml
@@ -7,13 +7,13 @@
     android:orientation="vertical">
 
     <TextView
+        android:layout_marginTop="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/input_title"
         android:text="title"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
         android:visibility="visible"
         android:textColor="@color/title_text_color"/>
 
@@ -33,6 +33,7 @@
             android:layout_height="match_parent"
             android:clickable="true"
             android:focusable="true"
+            android:layout_marginBottom="6dp"
             android:focusableInTouchMode="false"
             android:inputType="none" />
     </com.google.android.material.textfield.TextInputLayout>
