--- a/android-tru-forms/src/main/res/layout/tru_enum_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_enum_view.xml
@@ -6,13 +6,13 @@
     android:orientation="vertical">
 
     <TextView
+        android:layout_marginTop="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/input_title"
         android:text="title"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
         android:visibility="visible"
         android:textColor="@color/title_text_color"/>
 
@@ -23,7 +23,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:hintAnimationEnabled="false"
-        android:layout_margin="10dp">
+        android:layout_marginTop="6dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
 
         <androidx.appcompat.widget.AppCompatAutoCompleteTextView
             android:id="@+id/editText"
@@ -31,6 +33,7 @@
             android:layout_height="wrap_content"
             android:cursorVisible="false"
             android:inputType="none"
+            android:layout_marginBottom="6dp"
             android:shadowColor="@color/title_text_color"
             android:popupBackground="@android:drawable/dialog_holo_light_frame"
             android:popupElevation="10dp"/>
