--- a/android-tru-forms/src/main/res/layout/tru_number_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_number_view.xml
@@ -9,13 +9,13 @@
 
 
     <TextView
+        android:layout_marginTop="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/input_title"
         android:text="title"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
         android:visibility="visible"
         android:textColor="@color/title_text_color"/>
 
@@ -24,7 +24,9 @@
     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_marginTop="6dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     app:hintEnabled="false">
 
 <com.google.android.material.textfield.TextInputEditText
@@ -33,6 +35,7 @@
     android:layout_height="wrap_content"
     android:inputType="number"
     tools:hint="this is hint"
+    android:layout_marginBottom="6dp"
     tools:text="" />
 </com.google.android.material.textfield.TextInputLayout>
 </LinearLayout>
