--- a/android-tru-forms/src/main/res/layout/tru_location_pick_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_location_pick_view.xml
@@ -7,13 +7,13 @@
     android:orientation="vertical">
 
     <TextView
+        android:layout_marginTop="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/input_title"
         android:text="title"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
         android:visibility="visible"
         android:textColor="@color/title_text_color"/>
 
@@ -34,6 +34,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             tools:hint="this is hint"
+            android:layout_marginBottom="6dp"
             tools:text="" />
     </com.google.android.material.textfield.TextInputLayout>
 
