--- a/android-tru-forms/src/main/res/layout/tru_enum_data_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_enum_data_view.xml
@@ -1,38 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <TextView
-        android:layout_marginTop="12dp"
+        android:id="@+id/input_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/input_title"
-        android:text="title"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="12dp"
         android:layout_marginRight="10dp"
-        android:visibility="visible"
-        android:textColor="@color/title_text_color"/>
-
+        android:text="title"
+        android:textColor="@color/title_text_color"
+        android:visibility="visible" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/pick_item_btn"
         style="@style/OutlinedButton"
         android:layout_width="fill_parent"
         android:layout_height="65dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginRight="10dp"
         android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
         android:gravity="start|center_vertical"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:textAllCaps="false"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="6dp"
+        android:textColor="@color/title_text_color"
         app:strokeColor="@android:color/darker_gray"
-        app:strokeWidth="1sp"
-        android:textColor="@color/title_text_color" />
+        app:strokeWidth="1sp" />
 
+    <TextView
+        android:id="@+id/tv_required"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:visibility="gone"
+        android:textColor="@color/design_default_color_error"
+        android:text="@string/required_field" />
 </LinearLayout>
