--- a/android-tru-forms/src/main/res/values/colors.xml
+++ b/android-tru-forms/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="grey">#F4F4F8</color>
     <color name="colorAccent">#A6E2EF</color>
     <color name="title_text_color">#545454</color>
+    <color name="light_grey">#aaa</color>
+    <color name="dark_grey">#70000000</color>
 
 
 </resources>
