--- a/android-tru-forms/src/main/res/layout/fragment_tru_form.xml
+++ b/android-tru-forms/src/main/res/layout/fragment_tru_form.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
@@ -19,26 +18,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" />
 
-        <!--        <Button-->
-        <!--            android:id="@+id/submit_btn"-->
-        <!--            android:layout_width="220dp"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_gravity="bottom|center_horizontal"-->
-        <!--            android:layout_margin="16dp"-->
-        <!--            android:backgroundTint="@color/colorPrimary"-->
-        <!--            android:text="@string/submit"-->
-        <!--            android:textColor="@android:color/white" />-->
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/submit_btn"
             android:layout_width="220dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
             android:layout_margin="16dp"
-            android:backgroundTint="@color/colorPrimary"
-            android:padding="16dp"
-            android:fontFamily="@font/roboto_medium"
-            android:textColor="@android:color/white"
+            android:background="@color/colorPrimary"
             android:text="@string/submit"
-            android:layout_gravity="bottom|center_horizontal" />
+            android:textColor="@android:color/white" />
     </LinearLayout>
-
 </ScrollView>
